--- a/fifteen.html
+++ b/fifteen.html
@@ -1,30 +1,35 @@
 <!doctype html>
+<!--
+    Created by Kenny Nguyen, Keon Hee Park, and Mona Shittul
+    Project 2: Game of Fifteen
+    fifteen.html
+	Course: CSC 4370 - Web Programming
+	Instructor: Louis Henry
+	Date: November 7, 2016
+-->
 <html>
 
 <head lang="en">
 	<meta charset="UTF-8">
 	<title>matching game</title>
 	<script type="text/javascript" src="fifteen.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/style.css"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
 	<div class="centering">
-
-
 		<div id="memory_board"></div>
 		<script>
+			/*global newBoard*/
 			newBoard();
 		</script>
-
 		<input type="button" id="btn1" onclick="start()" value="shuffle">
 		<input type="button" id="btn2" onclick="startE()" value="shuffle easy">
 		<input type="button" id="btn4" onclick="newBoard()" value="Play Again">
-
-
 		<p id="later"><br><span id='timer'></span> seconds</p>
 		<form>
-			<div id="win"> Enter Name <input id="name" type="text"> <input type="button" id="btn3" onclick="saveInfo()" value="submit"></div>
+			<div id="win"> Enter Name <input id="name" type="text">
+				<input type="button" id="btn3" onclick="saveInfo()" value="submit"></div>
 		</form>
 		<div id="lb">
 			<h3>Leaderboard</h3>
