more commits to come...

--- a/fifteen.html
+++ b/fifteen.html
@@ -11,12 +11,17 @@
 
 <head lang="en">
 	<meta charset="UTF-8">
-	<title>matching game</title>
+	<title>Game of Fifteen</title>
 	<script type="text/javascript" src="fifteen.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
+	<img id="cs_logo" src="images/cs_logo.png" alt="CS Logo" />
+	<h1>Class Registration Ticket</h1>
+	<h2>Objective:
+		<p id="objective">Solve this puzzle before your classes for next semester is full.</p>
+	</h2>
 	<div class="centering">
 		<div id="memory_board"></div>
 		<script>
@@ -34,6 +39,15 @@
 		<div id="lb">
 			<h3>Leaderboard</h3>
 		</div>
+	</div>
+
+	<div id="bottom-right-div">
+		<footer id="bottom-right-footer">
+			<b>Created by:</b> Kenny Nguyen, Keon Hee Park, and Mona Shittul
+			<br>
+			<b>Completed:</b> November 7, 2016
+			<br>
+		</footer>
 	</div>
 </body>
 
