--- a/fifteen.html
+++ b/fifteen.html
@@ -34,7 +34,8 @@
 		<p id="later"><br><span id='timer'></span> seconds</p>
 		<form>
 			<div id="win"> Enter Name <input id="name" type="text">
-				<input type="button" id="btn3" onclick="saveInfo()" value="submit"></div>
+				<input type="button" id="btn3" onclick="saveInfo()" value="submit">
+			</div>
 		</form>
 		<div id="lb">
 			<h3>Leaderboard</h3>
@@ -47,6 +48,14 @@
 			<br>
 			<b>Completed:</b> November 7, 2016
 			<br>
+			<p>
+				<a href="https://www.w3.org/Icons/valid-html401">
+					<img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-html401" alt="Valid HTML!"/>
+				</a>
+				<a href="http://jigsaw.w3.org/css-validator/check/referer">
+					<img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!"/>
+				</a>
+			</p>
 		</footer>
 	</div>
 </body>
