--- a/fifteen.html
+++ b/fifteen.html
@@ -1,5 +1,4 @@
-<!doctype html>
-<!--
+<!doctype html><!--
     Created by Kenny Nguyen, Keon Hee Park, and Mona Shittul
     Project 2: Game of Fifteen
     fifteen.html
@@ -32,9 +31,8 @@
 		<div id="memory_board"></div>
 		<div id="picOptions">
 			<div id="selectPic" class="floatL"></div>
-			<input type="button" id="btn5" class="floatL" onclick="changePic()" value="Change Picture">
+			<input type="button" id="btn5" class="floatL" onclick="changePic()" value="Change Picture"/>
 		</div>
-
 		<script>
 			/*global newBoard*/
 			newBoard();
@@ -72,6 +70,17 @@
 			</p>
 		</footer>
 	</div>
+
+	<div class="Homer"></div>
+	<style>
+		.Homer {
+			height: 165px;
+			width: 250px;
+			background: url('gifs/finished.gif');
+			margin: auto;
+			/*position the [div] on the center*/
+		}
+	</style>
 </body>
 
 </html>
