animation gif after end game... need bug fixed for disabled buttons after game ends

--- a/fifteen.html
+++ b/fifteen.html
@@ -1,4 +1,5 @@
-<!doctype html><!--
+<!doctype html>
+<!--
     Created by Kenny Nguyen, Keon Hee Park, and Mona Shittul
     Project 2: Game of Fifteen
     fifteen.html
@@ -28,10 +29,11 @@
 	</h2>
 
 	<div class="centering">
-		<div id="memory_board"></div>
-		<div id="picOptions">
+			<div id="memory_board"></div>
+			<div id="after_game"></div>
+			<div id="picOptions">
 			<div id="selectPic" class="floatL"></div>
-			<input type="button" id="btn5" class="floatL" onclick="changePic()" value="Change Picture"/>
+			<input type="button" id="btn5" class="floatL" onclick="changePic()" value="Change Picture" />
 		</div>
 		<script>
 			/*global newBoard*/
@@ -70,17 +72,6 @@
 			</p>
 		</footer>
 	</div>
-
-	<div class="Homer"></div>
-	<style>
-		.Homer {
-			height: 165px;
-			width: 250px;
-			background: url('gifs/finished.gif');
-			margin: auto;
-			/*position the [div] on the center*/
-		}
-	</style>
 </body>
 
 </html>
