--- a/fifteen.html
+++ b/fifteen.html
@@ -45,7 +45,7 @@
 			<input type="button" id="btn2" onclick="startE()" value="shuffle easy">
 			<input type="button" id="btn4" class="hide" onclick="newBoard()" value="Play Again">
 		</div>
-		<p id="clock" class="hide"><br><span id='timer'></span> seconds</p>
+		<p id="clock" class="hide"><br><span id='timer'></span> Second(s)</p>
 		<form>
 			<div id="win" class="hide"> Enter Name <input id="name" type="text">
 				<input type="button" id="btn3" onclick="saveInfo()" value="submit">
