--- a/fifteen.html
+++ b/fifteen.html
@@ -25,7 +25,7 @@
 	<img id="cs_logo" src="images/cs_logo.png" alt="CS Logo" />
 	<h1>Class Registration Ticket</h1>
 	<h2>Objective:
-		<p id="objective">Solve this puzzle before your classes for next semester is full.</p>
+		<p id="objective">Solve this puzzle before your classes for next semester are full.</p>
 	</h2>
 
 	<div class="centering">
