--- a/fifteen.html
+++ b/fifteen.html
@@ -24,9 +24,8 @@
 
 	<img id="cs_logo" src="images/cs_logo.png" alt="CS Logo" />
 	<h1>Class Registration Ticket</h1>
-	<h2>Objective:
-		<p id="objective">Solve this puzzle before your classes for next semester are full.</p>
-	</h2>
+	<h2>Objective:</h2>
+	<p id="objective">Solve this puzzle before your classes for next semester are full.</p>
 
 	<div class="centering">
 			<div id="memory_board"></div>
