--- a/fifteen.html
+++ b/fifteen.html
@@ -42,6 +42,7 @@
 		<div class="moreButtons">
 			<input type="button" id="btn1" onclick="start()" value="shuffle">
 			<input type="button" id="btn2" onclick="startE()" value="shuffle easy">
+			<p id="moves"></p>
 			<input type="button" id="btn4" class="hide" onclick="newBoard()" value="Play Again">
 		</div>
 		<p id="clock" class="hide"><br><span id='timer'></span> Second(s)</p>
